src/test/ui/issues/issue-41139.stderr
error[E0618]: expected function, found `&dyn Fn() -> (dyn Trait + 'static)`
  --> $DIR/issue-41139.rs:10:26
   |
LL | fn get_function<'a>() -> &'a dyn Fn() -> dyn Trait {
   | -------------------------------------------------- `get_function` defined here returns `&dyn Fn() -> (dyn Trait + 'static)`
...
LL |     let t: &dyn Trait = &get_function()();
   |                          ^^^^^^^^^^^^^^ this trait object returns an unsized value `(dyn Trait + 'static)`, so it cannot be called

error: aborting due to previous error

For more information about this error, try `rustc --explain E0618`.
